--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "pinia": "^2.1.7",
     "qrcode": "^1.5.4",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.4.38",
     "vue-router": "^4.3.2"
   },
