--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "html2pdf.js": "^0.12.1",
     "pinia": "^2.1.7",
     "qrcode": "^1.5.4",
     "socket.io-client": "^4.8.1",
     "vue": "^3.4.38",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
